--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "prettytable>=3.17.0",
+    "pydantic[email]>=2.12.5",
     "requests>=2.32.5",
 ]
